Fixed an issue with sign in and sign up pages, before this the pages were not properly visible for users on mobile devices

--- a/static/css/account_css/account.css
+++ b/static/css/account_css/account.css
@@ -289,12 +289,9 @@ input:active {
 }
 
 .left-side-div-inner {
-    position: absolute;
-    left: 50%;
-    top: 45%;
-    transform: translate(-50%, -50%);
+    margin: 15% auto;
     width: 90%;
-    /* height: 100%; */
+    height: max-content;
     text-align: center;
     font-family: "Poppins", cursive;
 }
@@ -551,7 +548,7 @@ li {
     .left-side-div-inner {
         width: 70%;
         height: 85vh;
-        margin: 0;
+        margin: 20% auto;
     }
 
     .left-side-div {
